test/files/neg/no-string-plus-any-2.scala
package p

object Test {
  val b = "abc" + true
}
