test/files/neg/no-string-plus-any-2.check
no-string-plus-any-2.scala:4: error: type mismatch;
 found   : Boolean(true)
 required: String
  val b = "abc" + true
                  ^
one error found
